<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_picture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.spotOn.gui.TakePictureFragment"
    android:orientation="vertical"
    android:weightSum="1">


    <Button
        android:text="@string/captureButton"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:id="@+id/captureButton"
        android:layout_gravity="center_horizontal"
        android:onClick="dispatchTakePictureIntent"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/image_view"
        android:layout_alignStart="@+id/image_view" />

    <Button
        android:text="@string/storeButton"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="storePictureOnInternalStorage"
        android:id="@+id/storeButton"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/image_view"
        android:layout_alignLeft="@+id/image_view"
        android:layout_alignStart="@+id/image_view" />

    <Button
        android:text="@string/sendButton"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:onClick="sendPictureToServer"
        android:id="@+id/sendButton"
        android:layout_alignBaseline="@+id/storeButton"
        android:layout_alignBottom="@+id/storeButton"
        android:layout_alignRight="@+id/image_view"
        android:layout_alignEnd="@+id/image_view" />

    <Button
        android:text="@string/rotate"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="rotatePicture"
        android:id="@+id/rotateButton"
        android:layout_below="@+id/captureButton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:contentDescription="@string/pictureTaken"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:id="@+id/image_view"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/rotateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>
