<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_picture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.spotOn.gui.EditPictureActivity"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/pictureTaken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_view_edition"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/addTextButton"
        android:contentDescription="@string/addTextButton"
        android:onClick="goToDrawTextActivity"
        android:src="@drawable/ic_edit_mode_30dp"
        android:background="@drawable/button_shape_take_picture"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/rotateButton"
        android:contentDescription="@string/rotateButton"
        android:onClick="rotatePicture"
        android:src="@drawable/ic_rotate_30dp"
        android:background="@drawable/button_shape_take_picture"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirmButton"
        android:contentDescription="@string/confirmButton"
        android:onClick="confirmChanges"
        android:src="@drawable/ic_done_30dp"
        android:background="@drawable/button_shape_take_picture"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:text="@string/tryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tryButton"
        android:onClick="tryingRotation"/>

</RelativeLayout>
